testsuite/bsc.interra/messages/EBadExport/EBadExport2.bs.bsc-out.expected
checking package dependencies
compiling EBadExport2.bs
Error: "EBadExport2.bs", line 14, column 53: (T0009)
  Exported identifier `xyz' is not defined
